# wagtail-willie

./: .gitignore  README.md  pyproject.toml
src/wagtail_willie/: __init__.py  models.py  urls.py  utils.py  views.py
src/wagtail_willie/migrations/: 0001_initial.py  0002_make_slug_translatable.py
src/wagtail_willie/templates/wagtail_willie/: cookie_banner.html  cookie_preferences.html
src/wagtail_willie/templatetags/: cookie_tags.py
