[project]
name = "wagtail-willie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kamal Mustafa", email = "kamal@lalokalabs.co" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
